--- a/final/src/main/resources/templates/vista/detalleURL.html
+++ b/final/src/main/resources/templates/vista/detalleURL.html
@@ -28,69 +28,52 @@
 
                     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                            <h1 class="h2">Resumen para URL</h1>
+                            <h2 class="h2">Resumen para URL</h2>
                         </div>
                         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-                            <h1 class="h4">URL Original: <a th:text="${url_original.URLOriginal}"></a></h1>
-                            <h1 class="h4">URL Corta: <span th:text="${url_acortado}"></span></h1>
+                            <h4 class="h4">URL Original: <a th:text="${url_original.URLOriginal}"></a></h4>
+                            <h4 class="h4">URL Corta: <span th:text="${url_acortado}"></span></h4>
                         </div>
-                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-top pt-3 pb-2 mb-3 border-bottom">
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card-header">
-                                        QR a URL
-                                    </div>
-                                    <div class="card-body">
-                                        <img th:src="'/qr-code/' + ${url_acortado}" alt="">
+                        <div class="col-md-auto">
+                            <div class="row">
+                                <div class="col-md-auto">
+                                    <div class="card">
+                                        <div class="card-header">
+                                            QR a URL
+                                        </div>
+                                        <div class="card-body">
+                                            <img th:src="'/qr-code/' + ${url_acortado}" alt="">
+                                        </div>
+                                        <div class="card-footer">
+                                            <div class="row mt-2">
+                                                <a th:href="'/' + ${url_acortado}" class="btn btn-warning">Dirigirse al URL</a>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-2">
-                                <a th:href="'/' + ${url_acortado}" class="btn btn-warning">Dirigirse al URL</a>
-                            </div>
                         </div>
+
 
                         <canvas id="myFloatingBars"></canvas>
 
-<!--                        <h2 class="mt-5">Tabla de datos</h2>-->
-<!--                        <div class="table-responsive">-->
-<!--                            <table class="table table-striped table-sm">-->
-<!--                                <thead>-->
-<!--                                <tr>-->
-<!--                                    <th scope="col">Fecha accedido</th>-->
-<!--                                    <th scope="col">Dirección IP</th>-->
-<!--                                    <th scope="col">Agente de usuario</th>-->
-<!--                                </tr>-->
-<!--                                </thead>-->
-<!--                                <tbody>-->
-<!--                                <tr th:each="label, iter1 : ${labels}">-->
-<!--                                    <td th:text="${label}"></td>-->
-<!--                                    <td>-->
-<!--                                        <ul>-->
-<!--                                            <li th:each="acortador : ${acortadores}">-->
-<!--                                                <div th:each="fechaAcceso : ${acortador.fechasAcceso}">-->
-<!--                                                    <div th:if="${fechaAcceso.format(DateTimeFormatter.ofPattern('dd/MM/yyyy HH:mm:ss')) == label}">-->
-<!--                                                        <span th:text="${acortador.direccionesIP[__${#lists.index(acortador.fechasAcceso, fechaAcceso)}__]}"></span>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                            </li>-->
-<!--                                        </ul>-->
-<!--                                    </td>-->
-<!--                                    <td>-->
-<!--                                        <ul>-->
-<!--                                            <li th:each="acortador : ${acortadores}">-->
-<!--                                                <div th:each="fechaAcceso : ${acortador.fechasAcceso}">-->
-<!--                                                    <div th:if="${fechaAcceso.format(DateTimeFormatter.ofPattern('dd/MM/yyyy HH:mm:ss')) == label}">-->
-<!--                                                        <span th:text="${acortador.agentesUsuario[__${#lists.index(acortador.fechasAcceso, fechaAcceso)}__]}"></span>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                            </li>-->
-<!--                                        </ul>-->
-<!--                                    </td>-->
-<!--                                </tr>-->
-<!--                                </tbody>-->
-<!--                            </table>-->
-<!--                        </div>-->
+                        <h2 class="mt-5">Tabla de datos</h2>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-sm">
+                                <thead>
+                                <tr>
+                                    <th scope="col">Fecha accedido</th>
+                                    <th scope="col">Veces visitado</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="label, iter1 : ${labels}">
+                                    <td th:text="${label}"></td>
+                                    <td th:text="${data[iter1.count - 1]}"></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
 
 
                     </main>
@@ -108,8 +91,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
     <script th:inline="javascript">
         var ctx = document.getElementById('myFloatingBars').getContext('2d');
-        var labels = /*aquí pasamos la lista como cadena*/ [[${fechasAcceso}]];
-        var data = /*aquí pasamos la lista como cadena*/ [[${visitas}]];
+        var labels = /*aquí pasamos la lista como cadena*/ [[${labels}]];
+        var data = /*aquí pasamos la lista como cadena*/ [[${data}]];
         var backgroundColors = ["#FF6384", "#36A2EB", "#FFCE56", "#8E5EA2", "#3cba9f", "#e8c3b9", "#c45850"];
         var myFloatingBars = new Chart(ctx, {
             type: 'bar',
@@ -129,7 +112,7 @@
                     },
                     title: {
                         display: true,
-                        text: 'Fechas y Visitas por URL'
+                        text: 'Fechas acceso por URL'
                     }
                 }
             }
