--- a/final/src/main/resources/templates/vista/index.html
+++ b/final/src/main/resources/templates/vista/index.html
@@ -40,7 +40,7 @@
             <span>URL acortada:</span>
             <input type="text" th:value="${url_acortada}" name="url_acortada" id="floatingInput2">
 
-            <a class="btn btn-warning" th:href="'/'+ ${url_acortada}">Enlace</a>
+            <a class="btn btn-warning" th:href="'/'+ ${url_acortada}" target="_blank">Enlace</a>
 
             <div class="col">
                 <div class="card" style="width: 100%; min-height: 300px; max-height: 300px; text-align: justify;">
