--- a/final/src/main/resources/templates/vista/detalleURL.html
+++ b/final/src/main/resources/templates/vista/detalleURL.html
@@ -12,112 +12,242 @@
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-
-    <div class="container-fluid">
-        <div class="row">
-            <header th:insert="~{templates/vista/reutilizable_fragments.html :: header}"></header>
-        </div>
-
-        <div class="row">
-            <div class="container-fluid">
-                <div class="row">
-
-                    <nav class="col-md-3 col-lg-2 d-md-block bg-body-tertiary sidebar collapse" >
-                        <nav th:insert="~{templates/vista/reutilizable_fragments.html :: sidebar}"></nav>
-                    </nav>
-
-                    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                            <h2 class="h2">Resumen para URL</h2>
-                        </div>
-                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-                            <h4 class="h4">URL Original: <a th:text="${url_original.URLOriginal}"></a></h4>
-                            <h4 class="h4">URL Corta: <span th:text="${url_acortado}"></span></h4>
-                        </div>
-                        <div class="col-md-auto">
-                            <div class="row">
-                                <div class="col-md-auto">
-                                    <div class="card">
-                                        <div class="card-header">
-                                            QR a URL
-                                        </div>
-                                        <div class="card-body">
-                                            <img th:src="'/qr-code/' + ${url_acortado}" alt="">
-                                        </div>
-                                        <div class="card-footer">
-                                            <div class="row mt-2">
-                                                <a th:href="'/' + ${url_acortado}" class="btn btn-warning">Dirigirse al URL</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-
-                        <canvas id="myFloatingBars"></canvas>
-
-                        <h2 class="mt-5">Tabla de datos</h2>
-                        <div class="table-responsive">
-                            <table class="table table-striped table-sm">
-                                <thead>
-                                <tr>
-                                    <th scope="col">Fecha accedido</th>
-                                    <th scope="col">Veces visitado</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr th:each="label, iter1 : ${labels}">
-                                    <td th:text="${label}"></td>
-                                    <td th:text="${data[iter1.count - 1]}"></td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        </div>
-
-
-                    </main>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-2 col-sm-4 p-0">
+            <div class="sticky-top">
+                <div class="sidebar d-flex flex-column flex-shrink-0 p-3 text-bg-dark vh-100 sidebar collapse" style="width: 85%;">
+                    <a href="/" class="d-flex mx-auto">
+                        <img src="/images/Logo-Text-Horizontal-White.png" alt="logo-LinkZip" class="logoHorizontal" style="max-height: 40px; min-width: 50px">
+                    </a>
+                    <hr>
+                    <ul class="nav nav-pills flex-column mb-auto">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link active bg-warning text-white" aria-current="page">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
+                                Dashboard
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#cantVisitasXFecha" class="nav-link text-white">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
+                                Fechas
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#entradasXNavegador" class="nav-link text-white">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><path d="M16.2 7.8l-2 6.3-6.4 2.1 2-6.3z"/></svg>
+                                Navegadores
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/URL/misUrls" class="nav-link text-white">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 17l5-5-5-5M19.8 12H9M10 3H4v18h6"/></svg>
+                                Volver atras
+                            </a>
+                        </li>
+                    </ul>
+                    <hr>
+                    <div>
+                        <a href="#" class="d-flex align-items-center text-white text-decoration-none gap-2" >
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5.52 19c.64-2.2 1.84-3 3.22-3h6.52c1.38 0 2.58.8 3.22 3"/><circle cx="12" cy="10" r="3"/><circle cx="12" cy="12" r="10"/></svg>
+                            <strong><span th:text="${session.usuario.usuario}" >User</span></strong>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
 
+        <div class="col-md-9 col-sm-5 col-xs-5 mx-5">
+            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom ">
+                <h2 class="h2">Resumen para URL</h2>
+            </div>
+            <div class="m">
+                <h4 class="h4">URL Original: <a th:text="${url_original.URLOriginal}"></a></h4>
+                <h4 class="h4">URL Corta: <span th:text="${url_acortado}"></span></h4>
+            </div>
+            <div class="row mt-5">
+                <div class="col-md-auto">
+                    <div class="card">
+                        <div class="card-header">
+                            QR a URL
+                        </div>
+                        <div class="card-body">
+                            <img th:src="'/qr-code/' + ${url_acortado}" alt="">
+                        </div>
+                        <div class="card-footer">
+                            <div class="row mt-2">
+                                <a th:href="'/' + ${url_acortado}" class="btn btn-warning">Dirigirse al URL</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-        <div class="row">
-            <footer th:insert="~{templates/vista/reutilizable_fragments.html :: footer}"></footer>
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-header">
+                            Cantidad de visitas
+                        </div>
+                        <div class="card-body">
+                            <span th:text="${cantidadVisitas}"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <h2 class="h2 mt-5" id="cantVisitasXFecha">Cantidad de visitas por fecha</h2>
+                <canvas id="myFloatingBars"></canvas>
+            </div>
+
+
+            <h2 class="mt-5">Tabla de datos</h2>
+            <div class="table-responsive">
+                <table class="table table-striped table-sm">
+                    <thead>
+                    <tr>
+                        <th scope="col">Fecha accedido</th>
+                        <th scope="col">Veces visitado</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="label, iter1 : ${labels}">
+                        <td th:text="${label}"></td>
+                        <td th:text="${data[iter1.count - 1]}"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="row">
+                <h2 class="h2 mt-5" id="entradasXNavegador">Entradas segun navegador</h2>
+                <canvas id="pieNavegadores"></canvas>
+            </div>
+
+
+            <h2 class="mt-5">Tabla de datos</h2>
+            <div class="table-responsive">
+                <table class="table table-striped table-sm">
+                    <thead>
+                    <tr>
+                        <th scope="col">Navegador</th>
+                        <th scope="col">Veces visitado</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="label2, iter2 : ${labels2}">
+                        <td th:text="${label2}"></td>
+                        <td th:text="${data2[iter2.count - 1]}"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
+</div>
 
-    <!-- Incluye los recursos de Chart.js y Popper.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
-    <script th:inline="javascript">
-        var ctx = document.getElementById('myFloatingBars').getContext('2d');
-        var labels = /*aquí pasamos la lista como cadena*/ [[${labels}]];
-        var data = /*aquí pasamos la lista como cadena*/ [[${data}]];
-        var backgroundColors = ["#FF6384", "#36A2EB", "#FFCE56", "#8E5EA2", "#3cba9f", "#e8c3b9", "#c45850"];
-        var myFloatingBars = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: labels,
-                datasets: [{
-                    label: "Fechas por URL",
-                    data: data,
-                    backgroundColor: backgroundColors
-                }]
-            },
-            options: {
-                responsive: true,
-                plugins: {
-                    legend: {
-                        position: 'top',
-                    },
-                    title: {
-                        display: true,
-                        text: 'Fechas acceso por URL'
-                    }
+
+
+
+
+<!--        <div class="row">-->
+<!--            <footer th:insert="~{templates/vista/reutilizable_fragments.html :: footer}"></footer>-->
+<!--        </div>-->
+
+
+<!-- Incluye los recursos de Chart.js y Popper.js -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
+<script th:inline="javascript">
+    var ctx = document.getElementById('myFloatingBars').getContext('2d');
+    var labels = /*aquí pasamos la lista como cadena*/ [[${labels}]];
+    var data = /*aquí pasamos la lista como cadena*/ [[${data}]];
+    var backgroundColors = ["#FF6384", "#36A2EB", "#FFCE56", "#8E5EA2", "#3cba9f", "#e8c3b9", "#c45850"];
+    var myFloatingBars = new Chart(ctx, {
+        type: 'bar',
+        data: {
+            labels: labels,
+            datasets: [{
+                label: "Fechas por URL",
+                data: data,
+                backgroundColor: backgroundColors
+            }]
+        },
+        options: {
+            responsive: true,
+            plugins: {
+                legend: {
+                    position: 'top',
+                },
+                title: {
+                    display: true,
+                    text: 'Fechas acceso por URL'
                 }
             }
-        });
-    </script>
+        }
+    });
+</script>
 
+<script th:inline="javascript">
+    var ctx = document.getElementById('pieNavegadores').getContext('2d');
+    var labels2 = /* aquí pasamos la lista de etiquetas como cadena */ [[${labels2}]];
+    var data2 = /* aquí pasamos la lista de datos como cadena */ [[${data2}]];
+
+    var pieNavegadores = new Chart(ctx, {
+        type: 'pie',
+        data: {
+            labels: labels2,
+            datasets: [{
+                label: 'Cantidad de visitas desde un agente de usuario',
+                data: data2,
+                backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(255, 206, 86, 0.2)',
+                    'rgba(75, 192, 192, 0.2)',
+                    'rgba(153, 102, 255, 0.2)',
+                    'rgba(255, 159, 64, 0.2)'
+                ],
+                borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)',
+                    'rgba(153, 102, 255, 1)',
+                    'rgba(255, 159, 64, 1)'
+                ],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            responsive: true,
+            plugins: {
+                legend: {
+                    position: 'top',
+                },
+                title: {
+                    display: true,
+                    text: 'Cantidad de visitas desde un agente de usuario'
+                }
+            }
+        }
+    });
+</script>
+
+<script>
+    const navLinks = document.querySelectorAll('.nav-link');
+
+    navLinks.forEach(navLink => {
+        navLink.addEventListener('click', () => {
+            // Elimina la clase 'active' de todos los elementos de la lista
+            navLinks.forEach(link => link.classList.remove('active'));
+            navLinks.forEach(link => link.classList.remove('bg-warning'));
+
+            // Agrega la clase 'active' al elemento seleccionado
+            navLink.classList.add('active');
+            navLink.classList.add('bg-warning');
+        });
+    });
+
+</script>
 </body>
 </html>
