--- a/final/src/main/resources/templates/vista/gestionUrls.html
+++ b/final/src/main/resources/templates/vista/gestionUrls.html
@@ -11,58 +11,55 @@
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <header th:insert="~{templates/vista/reutilizable_fragments.html :: header}"></header>
-        </div>
+<div class="container-fluid">
+    <div class="row">
+        <header th:insert="~{templates/vista/reutilizable_fragments.html :: header}"></header>
+    </div>
 
-        <div class="row">
-            <h1 class="text-center mt-5">
-                Listado URLS
-            </h1>
-            <br>
-            <br>
-            <br>
-            <div class="row align-items-start">
-                <div class="table-responsive">
-                    <table class="table table-striped table-bordered">
-                        <thead class="thead-light">
-                        <tr>
-                            <th scope="col"> URL Acortado </th>
-                            <th scope="col"> URL Original </th>
-                            <th scope="col"> Usuario </th>
-                            <th scope="col"> Fecha creacion </th>
-                            <th scope="col"> Cantidad visitas </th>
-                            <th scope="col"> Direccion IP </th>
-                            <th th:if="${(usuario != null ) && (usuario.isAdmin == true)}"> Accion </th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr th:each="url : ${acortadas}">
-                            <td th:text="${url.URLAcortado}"></td>
-                            <td th:text="${url.URLOriginal.URLOriginal}"></td>
-                            <td th:text="${url.usuario.usuario}"></td>
-                            <td th:text="${url.created_date_time}"></td>
-                            <td th:text="${url.visits_counter}"></td>
-                            <td th:text="${url.ip_address}"></td>
-                            <td th:if="${usuario != null}">
-                                <div th:if="${usuario.isAdmin == true}">
-                                    <form method="post" th:action="'/Seguridad/URL/Administrar/Eliminar/' + ${url.idAcortador}">
-                                        <button type="submit" class="btn btn-outline-danger">Eliminar</button>
-                                    </form>
-                                </div>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
+    <div class="row">
+        <h1 class="text-center mt-5">
+            Listado URLS
+        </h1>
+        <div class="row align-items-start mt-5">
+            <div class="table-responsive">
+                <table class="table table-striped table-bordered">
+                    <thead class="thead-light">
+                    <tr>
+                        <th scope="col"> URL Acortado </th>
+                        <th scope="col"> URL Original </th>
+                        <th scope="col"> Usuario </th>
+                        <th scope="col"> Fecha creacion </th>
+                        <th scope="col"> Cantidad visitas </th>
+                        <th scope="col"> Direccion IP </th>
+                        <th th:if="${(usuario != null ) && (usuario.isAdmin == true)}"> Accion </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="url : ${acortadas}">
+                        <td th:text="${url.URLAcortado}"></td>
+                        <td th:text="${url.URLOriginal.URLOriginal}"></td>
+                        <td th:text="${url.usuario.usuario}"></td>
+                        <td th:text="${url.created_date_time}"></td>
+                        <td th:text="${url.visits_counter}"></td>
+                        <td th:text="${url.ip_address}"></td>
+                        <td th:if="${usuario != null}">
+                            <div th:if="${usuario.isAdmin == true}">
+                                <form method="post" th:action="'/Seguridad/URL/Administrar/Eliminar/' + ${url.idAcortador}">
+                                    <button type="submit" class="btn btn-outline-danger">Eliminar</button>
+                                </form>
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
-
-        <div class="row">
-            <footer th:insert="~{templates/vista/reutilizable_fragments.html :: footer}"></footer>
-        </div>
     </div>
+
+    <div class="row">
+        <footer th:insert="~{templates/vista/reutilizable_fragments.html :: footer}"></footer>
+    </div>
+</div>
 
 </body>
 </html>
