--- a/final/src/main/resources/templates/vista/listadoUrls.html
+++ b/final/src/main/resources/templates/vista/listadoUrls.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row">
+        <div class="row shadow-lg">
             <header th:insert="~{templates/vista/reutilizable_fragments.html :: header}"></header>
         </div>
 
