--- a/final/src/main/resources/templates/vista/index.html
+++ b/final/src/main/resources/templates/vista/index.html
@@ -22,11 +22,11 @@
         <div class="container my-5">
             <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
                 <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-                    <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Border hero with cropped image and shadows</h1>
-                    <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+                    <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Bienvenido!</h1>
+                    <p class="lead">LinkZip es la página que acorta tus links con un clic. También te ofrece estadísticas con gráficos y códigos QR para tus links. Prueba LinkZip y comparte tu contenido fácilmente!</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Primary</button>
-                        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+                        <a href="" type="button" class="btn btn-warning btn-lg px-4 me-md-2 fw-bold">Inicia aqui</a>
+                        <a href="#information" type="button" class="btn btn-outline-secondary btn-lg px-4">Mas informacion</a>
                     </div>
                 </div>
                 <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
