--- a/final/src/main/resources/templates/vista/login.html
+++ b/final/src/main/resources/templates/vista/login.html
@@ -11,9 +11,9 @@
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid ">
     <div class="row">
-      <header class="containerReutilizables">
+      <header class="containerReutilizables shadow-lg">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
           <img src="/images/Logo-with-White.png" alt="logo-LinkZip" class="logo">
         </div>
