--- a/final/src/main/resources/templates/vista/detalleURL.html
+++ b/final/src/main/resources/templates/vista/detalleURL.html
@@ -16,7 +16,7 @@
     <div class="row">
         <div class="col-md-2 col-sm-4 p-0">
             <div class="sticky-top">
-                <div class="sidebar d-flex flex-column flex-shrink-0 p-3 text-bg-dark vh-100 sidebar collapse" style="width: 85%;">
+                <div class="sidebar d-flex flex-column flex-shrink-0 p-3 text-bg-dark vh-100 sidebar collapse shadow-lg" style="width: 85%;">
                     <a href="/" class="d-flex mx-auto">
                         <img src="/images/Logo-Text-Horizontal-Whitel.png" alt="logo-LinkZip" class="logoHorizontal" style="max-height: 40px; min-width: 50px">
                     </a>
@@ -87,6 +87,17 @@
                     <div class="card">
                         <div class="card-header">
                             Cantidad de visitas
+                        </div>
+                        <div class="card-body">
+                            <span th:text="${cantidadVisitas}"></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-header">
+                            Cantidad de navegadores
                         </div>
                         <div class="card-body">
                             <span th:text="${cantidadVisitas}"></span>
