--- a/final/src/main/resources/templates/vista/gestionUrls.html
+++ b/final/src/main/resources/templates/vista/gestionUrls.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container-fluid">
-    <div class="row shadow-lg">
+    <div class="row">
         <header th:insert="~{templates/vista/reutilizable_fragments.html :: header}"></header>
     </div>
 
