--- a/final/src/main/resources/templates/vista/reutilizable_fragments.html
+++ b/final/src/main/resources/templates/vista/reutilizable_fragments.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/estilo.css">
 </head>
 <body>
-<header th:fragment="header" class="containerReutilizables">
+<header th:fragment="header" class="containerReutilizables shadow-lg">
   <div class="container-fluid">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
       <img src="/images/Logo-with-White.png" alt="logo-LinkZip" class="logo">
@@ -44,7 +44,7 @@
   </div>
 </header>
 
-<footer th:fragment="footer" class="containerReutilizables">
+<footer th:fragment="footer" class="containerReutilizables shadow-lg">
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-6">
